@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Dev&#xa;Team 1" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="760" y="45" width="40" height="60" as="geometry"/></mxCell><mxCell id="3" value="Dev&#xa;Team 2" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="760" y="145" width="40" height="60" as="geometry"/></mxCell><mxCell id="4" value="overlay repo 1" style="shape=folder" vertex="1" parent="1"><mxGeometry x="590" y="35" width="120" height="80" as="geometry"/></mxCell><mxCell id="7" value="overlay repo 2" style="shape=folder" vertex="1" parent="1"><mxGeometry x="590" y="135" width="120" height="80" as="geometry"/></mxCell><mxCell id="8" value="" style="endArrow=none" edge="1" parent="1" source="2" target="4"><mxGeometry as="geometry"/></mxCell><mxCell id="9" value="" style="endArrow=none" edge="1" parent="1" source="3" target="7"><mxGeometry as="geometry"/></mxCell><mxCell id="10" value="Server 1" style="swimlane" vertex="1" parent="1"><mxGeometry x="350" y="20" width="170" height="110" as="geometry"/></mxCell><mxCell id="18" value="" style="shape=folder" vertex="1" parent="10"><mxGeometry x="70" y="37.5" width="90" height="35" as="geometry"/></mxCell><mxCell id="11" value="Server 2" style="swimlane" vertex="1" parent="1"><mxGeometry x="350" y="145" width="170" height="110" as="geometry"/></mxCell><mxCell id="19" value="" style="shape=folder" vertex="1" parent="11"><mxGeometry x="70" y="37.5" width="90" height="35" as="geometry"/></mxCell><mxCell id="12" value="Server 3" style="swimlane" vertex="1" parent="1"><mxGeometry x="350" y="265" width="170" height="110" as="geometry"/></mxCell><mxCell id="20" value="" style="shape=folder" vertex="1" parent="12"><mxGeometry x="70" y="37.5" width="90" height="35" as="geometry"/></mxCell><mxCell id="15" value="" style="endArrow=none;edgeStyle=entityRelationEdgeStyle;dashed=1" edge="1" parent="1" source="13" target="19"><mxGeometry as="geometry"/></mxCell><mxCell id="16" value="" style="endArrow=none;edgeStyle=entityRelationEdgeStyle;dashed=1" edge="1" parent="1" source="13" target="18"><mxGeometry as="geometry"/></mxCell><mxCell id="17" value="Team 3" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="40" y="45" width="40" height="60" as="geometry"/></mxCell><mxCell id="21" value="" style="endArrow=none;elbow=vertical" edge="1" parent="1" source="4" target="18"><mxGeometry as="geometry"/></mxCell><mxCell id="22" value="" style="endArrow=none;elbow=vertical" edge="1" parent="1" source="4" target="19"><mxGeometry as="geometry"/></mxCell><mxCell id="23" value="" style="endArrow=none;elbow=vertical" edge="1" parent="1" source="7" target="19"><mxGeometry as="geometry"/></mxCell><mxCell id="24" value="" style="endArrow=none;elbow=vertical;exitX=0;exitY=0.5" edge="1" parent="1" source="7" target="18"><mxGeometry as="geometry"/></mxCell><mxCell id="25" value="" style="endArrow=none;elbow=vertical" edge="1" parent="1" source="7" target="20"><mxGeometry as="geometry"/></mxCell><mxCell id="27" value="Team 4" style="shape=actor;verticalLabelPosition=bottom;verticalAlign=top" vertex="1" parent="1"><mxGeometry x="40" y="152.5" width="40" height="60" as="geometry"/></mxCell><mxCell id="29" value="sysconfig repo 2" style="shape=folder" vertex="1" parent="1"><mxGeometry x="160" y="142.5" width="120" height="80" as="geometry"/></mxCell><mxCell id="30" value="sysconfig repo 1" style="shape=folder" vertex="1" parent="1"><mxGeometry x="160" y="35" width="120" height="80" as="geometry"/></mxCell><mxCell id="31" value="" style="endArrow=none" edge="1" parent="1" source="17" target="30"><mxGeometry as="geometry"/></mxCell><mxCell id="32" value="" style="endArrow=none" edge="1" parent="1" source="27" target="29"><mxGeometry as="geometry"/></mxCell><mxCell id="33" value="Configuration Management HUB 1" style="swimlane" vertex="1" parent="1"><mxGeometry x="50" y="310" width="200" height="200" as="geometry"/></mxCell><mxCell id="13" value="CMDB" style="shape=cylinder" vertex="1" parent="33"><mxGeometry x="70" y="100" width="60" height="80" as="geometry"/></mxCell><mxCell id="34" value="Test" style="shape=folder" vertex="1" parent="33"><mxGeometry x="20" y="27.5" width="80" height="52.5" as="geometry"/></mxCell><mxCell id="41" value="Prod" style="shape=folder" vertex="1" parent="33"><mxGeometry x="110" y="27.5" width="80" height="52.5" as="geometry"/></mxCell><mxCell id="43" value="" style="endArrow=none" edge="1" parent="33" source="34" target="13"><mxGeometry as="geometry"/></mxCell><mxCell id="44" value="" style="endArrow=none" edge="1" parent="33" source="13" target="41"><mxGeometry as="geometry"/></mxCell><mxCell id="35" value="Configuration Management HUB 2" style="swimlane" vertex="1" parent="1"><mxGeometry x="570" y="310" width="200" height="200" as="geometry"/></mxCell><mxCell id="36" value="CMDB" style="shape=cylinder" vertex="1" parent="35"><mxGeometry x="70" y="100" width="60" height="80" as="geometry"/></mxCell><mxCell id="37" value="Test" style="shape=folder" vertex="1" parent="35"><mxGeometry x="20" y="27.5" width="80" height="52.5" as="geometry"/></mxCell><mxCell id="42" value="Prod" style="shape=folder" vertex="1" parent="35"><mxGeometry x="110" y="27.5" width="80" height="52.5" as="geometry"/></mxCell><mxCell id="45" value="" style="endArrow=none" edge="1" parent="35" source="37" target="36"><mxGeometry as="geometry"/></mxCell><mxCell id="46" value="" style="endArrow=none" edge="1" parent="35" source="36" target="42"><mxGeometry as="geometry"/></mxCell><mxCell id="38" value="" style="endArrow=none;dashed=1;edgeStyle=entityRelationEdgeStyle" edge="1" parent="1" source="36" target="20"><mxGeometry as="geometry"/></mxCell><mxCell id="40" value="multi-master load-balanced" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" edge="1" parent="1" source="33" target="35"><mxGeometry as="geometry"/></mxCell><mxCell id="47" value="" style="endArrow=none;edgeStyle=orthogonalEdgeStyle;elbow=vertical;exitX=1;exitY=0.75" edge="1" parent="1" source="30" target="34"><mxGeometry as="geometry"/></mxCell><mxCell id="48" value="" style="endArrow=none;edgeStyle=orthogonalEdgeStyle;elbow=vertical;exitX=1;exitY=0.75" edge="1" parent="1" source="30" target="41"><mxGeometry as="geometry"/></mxCell><mxCell id="49" value="" style="endArrow=none;edgeStyle=orthogonalEdgeStyle;elbow=vertical;exitX=0;exitY=0.75" edge="1" parent="1" source="29" target="34"><mxGeometry as="geometry"/></mxCell><mxCell id="50" value="" style="endArrow=none;edgeStyle=orthogonalEdgeStyle;elbow=vertical;exitX=0;exitY=0.75" edge="1" parent="1" source="29" target="41"><mxGeometry as="geometry"/></mxCell></root></mxGraphModel>
