@@ -1,3 +1,7 @@
+** (2012-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
+	- Finish off DNSSEC-related operations
+	- Add in Puppet/Git chapter for central configuration management
+
 ** (2012-12-16) Sven Vermeulen <sven.vermeulen@siphos.be>
 	- Added in regular operations view, enhanced zone handling to use domain
 	  as file name.
